--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://chugachski.github.io/Personal-page",
+  "homepage": "http://chugachski.github.io/nate-smith-code",
   "name": "personal",
   "version": "0.0.1",
   "private": true,
